FIND_PACKAGE(Boost REQUIRED)

# Cap'n'Proto generated library example
FIND_PACKAGE(CapnProto REQUIRED)

SET(CAPNP_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})

CAPNP_GENERATE_CPP(CAPNP_SRCS CAPNP_HDRS "sandbox.capnp")

ADD_LIBRARY(sandbox_capnp STATIC ${CAPNP_SRCS} ${CAPNP_HDRS})

TARGET_LINK_LIBRARIES(sandbox_capnp
    INTERFACE CapnProto::capnp CapnProto::capnp-json)

TARGET_INCLUDE_DIRECTORIES(sandbox_capnp
    PUBLIC "${CAPNP_OUTPUT_DIR}")

SET_TARGET_PROPERTIES(sandbox_capnp PROPERTIES
    PUBLIC_HEADER ${CAPNP_HDRS})

INSTALL(TARGETS sandbox_capnp EXPORT UfwTargets
    ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT stlib
    PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}/sandbox"
    COMPONENT dev)
  
ADD_EXECUTABLE(sandbox
    main.cpp)

TARGET_LINK_LIBRARIES(sandbox
    PRIVATE sandbox_capnp)

INSTALL(TARGETS sandbox EXPORT UfwTargets
    RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin)
