FIND_PACKAGE(Threads REQUIRED)

SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost REQUIRED)

ADD_LIBRARY(ufw_topics SHARED
    topics.cpp
    topics.hpp)

SET_TARGET_PROPERTIES(ufw_topics PROPERTIES
    PUBLIC_HEADER topics.hpp)

TARGET_LINK_LIBRARIES(ufw_topics
    ufw_app
    ${CMAKE_THREAD_LIBS_INIT})

INSTALL(TARGETS ufw_topics EXPORT UfwTargets
    LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
    PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}/ufw/topics"
    COMPONENT shlib)
