FIND_PACKAGE(Threads REQUIRED)

SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost REQUIRED)

ADD_LIBRARY(topics SHARED
    topics.cpp
    topics.hpp)

SET_TARGET_PROPERTIES(topics PROPERTIES
    PUBLIC_HEADER topics.hpp)

TARGET_LINK_LIBRARIES(topics
    ufw_app
    ${CMAKE_THREAD_LIBS_INIT})

INSTALL(TARGETS topics EXPORT UfwTargets
    LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
    PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}/ufw/app"
    COMPONENT shlib)
